RESOLVED FIXED271012
AX: Fix computed role for elements: dd, details, dt, em, hgroup, option, s, strong
https://bugs.webkit.org/show_bug.cgi?id=271012
Summary AX: Fix computed role for elements: dd, details, dt, em, hgroup, option, s, s...
Tyler Wilcock
Reported 2024-03-14 15:28:25 PDT
...
Attachments
Patch (6.27 KB, patch)
2024-03-14 15:30 PDT, Tyler Wilcock
no flags
Patch (15.14 KB, patch)
2024-03-14 22:49 PDT, Tyler Wilcock
no flags
Patch (16.28 KB, patch)
2024-03-15 08:05 PDT, Tyler Wilcock
no flags
Patch (18.80 KB, patch)
2024-03-15 11:12 PDT, Tyler Wilcock
no flags
Radar WebKit Bug Importer
Comment 1 2024-03-14 15:28:34 PDT
Tyler Wilcock
Comment 2 2024-03-14 15:30:10 PDT
Tyler Wilcock
Comment 3 2024-03-14 22:49:19 PDT
chris fleizach
Comment 4 2024-03-15 07:30:00 PDT
Do we need to update expectations anywhere?
Tyler Wilcock
Comment 5 2024-03-15 08:05:23 PDT
Tyler Wilcock
Comment 6 2024-03-15 08:06:50 PDT
(In reply to chris fleizach from comment #4) > Do we need to update expectations anywhere? I think I've gotten them all after this latest patch, but I'll wait for the bots to run through to be certain.
chris fleizach
Comment 7 2024-03-15 08:25:41 PDT
(In reply to Tyler Wilcock from comment #6) > (In reply to chris fleizach from comment #4) > > Do we need to update expectations anywhere? > I think I've gotten them all after this latest patch, but I'll wait for the > bots to run through to be certain. Ah I missed that one of expectations was the wpt test...
Tyler Wilcock
Comment 8 2024-03-15 11:12:20 PDT
EWS
Comment 9 2024-03-16 10:33:15 PDT
Committed 276240@main (8d88c739fe87): <https://commits.webkit.org/276240@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 470390 [details].
Note You need to log in before you can comment on or make changes to this bug.