AX: Fix computed role for elements: dd, details, dt, em, hgroup, option, s, strong https://bugs.webkit.org/show_bug.cgi?id=271012 rdar://problem/124641956

Reviewed by Chris Fleizach.

This allows us to pass 8 more WPT subtests.

* LayoutTests/accessibility/display-contents/element-roles-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/html-aam/roles-expected.txt:
* LayoutTests/platform/glib/accessibility/aria-visible-element-roles-expected.txt:
* LayoutTests/platform/glib/accessibility/display-contents/element-roles-expected.txt:
* LayoutTests/platform/glib/accessibility/lists-expected.txt:
* LayoutTests/platform/ios/imported/w3c/web-platform-tests/html-aam/roles-expected.txt:
* LayoutTests/platform/mac-wk1/accessibility/aria-visible-element-roles-expected.txt:
* LayoutTests/platform/mac-wk1/accessibility/roles-exposed-expected.txt:
* LayoutTests/platform/mac-wk2/accessibility/aria-visible-element-roles-expected.txt:
* LayoutTests/platform/mac-wk2/accessibility/roles-exposed-expected.txt:
* Source/WebCore/accessibility/AccessibilityNodeObject.cpp:
(WebCore::AccessibilityNodeObject::determineAccessibilityRoleFromNode const):
* Source/WebCore/accessibility/AccessibilityObject.cpp:
(WebCore::initializeRoleMap):

Canonical link: https://commits.webkit.org/276240@main